Add MockRepository example in docs

--- a/docs/rules/Moq1400.md
+++ b/docs/rules/Moq1400.md
@@ -11,7 +11,6 @@ Mocks use the `MockBehavior.Loose` by default. Some people find this default beh
 unexpected behavior if the mock is improperly set up. To fix, specify either `MockBehavior.Loose` or
 `MockBehavior.Strict` to signify acknowledgement of the mock's behavior.
 
-
 ## Examples of patterns that are flagged by this analyzer
 
 ```csharp
@@ -32,6 +31,7 @@ interface ISample
 
 var mock = new Mock<ISample>(MockBehavior.Default); // Moq1400: Moq: Explicitly choose a mock behavior
 var mock2 = Mock.Of<ISample>(MockBehavior.Default); // Moq1400: Moq: Explicitly choose a mock behavior
+var repo = new MockRepository(MockBehavior.Default); // Moq1400: Moq: Explicitly choose a mock behavior
 ```
 
 ## Solution
@@ -44,4 +44,5 @@ interface ISample
 
 var mock = new Mock<ISample>(MockBehavior.Strict); // Or `MockBehavior.Loose`
 var mock2 = new Mock.Of<ISample>(MockBehavior.Strict); // Or `MockBehavior.Loose`
+var repo = new MockRepository(MockBehavior.Strict); // Or `MockBehavior.Loose`
 ```
