--- a/docs/rules/Moq1000.md
+++ b/docs/rules/Moq1000.md
@@ -28,3 +28,26 @@ class MyClass { }
 
 var mock = new Mock<MyClass>();
 ```
+
+## Suppress a warning
+
+If you just want to suppress a single violation, add preprocessor directives to
+your source file to disable and then re-enable the rule.
+
+```csharp
+#pragma warning disable Moq1000
+var mock = new Mock<MyClass>(); // Moq1000: Sealed classes cannot be mocked
+#pragma warning restore Moq1000
+```
+
+To disable the rule for a file, folder, or project, set its severity to `none`
+in the
+[configuration file](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/configuration-files).
+
+```ini
+[*.{cs,vb}]
+dotnet_diagnostic.Moq1000.severity = none
+```
+
+For more information, see
+[How to suppress code analysis warnings](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/suppress-warnings).
