Add rule suppression docs to README and each rule (#241)
Fixes #238

- Add a generic section on rule configuration to suppress / upgrade rule
severity
- Add a section on how to suppress the rule to each rule's doc (format
the same as the CAXXX rules)
- Add missing Moq1400 from `//docs/README.md`
- Fix table alignment / padding in `//docs/rules/*.md`

--- a/docs/rules/Moq1300.md
+++ b/docs/rules/Moq1300.md
@@ -1,10 +1,10 @@
 # Moq1300: `Mock.As()` should take interfaces only
 
-| Item | Value |
-| --- | --- |
-| Enabled | True |
+| Item     | Value |
+| -------- | ----- |
+| Enabled  | True  |
 | Severity | Error |
-| CodeFix | False |
+| CodeFix  | False |
 ---
 
 The `.As()` method is used when a mocked object must implement multiple interfaces. It cannot be used with abstract or
@@ -45,3 +45,27 @@ class SampleClass
 
 var mock = new Mock<ISampleInterface>();
 ```
+
+## Suppress a warning
+
+If you just want to suppress a single violation, add preprocessor directives to
+your source file to disable and then re-enable the rule.
+
+```csharp
+#pragma warning disable Moq1300
+var mock = new Mock<SampleClass>()
+    .As<SampleClass>(); // Moq1300: Mock.As() should take interfaces only
+#pragma warning restore Moq1300
+```
+
+To disable the rule for a file, folder, or project, set its severity to `none`
+in the
+[configuration file](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/configuration-files).
+
+```ini
+[*.{cs,vb}]
+dotnet_diagnostic.Moq1300.severity = none
+```
+
+For more information, see
+[How to suppress code analysis warnings](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/suppress-warnings).
