--- a/docs/rules/Moq1400.md
+++ b/docs/rules/Moq1400.md
@@ -1,10 +1,10 @@
 # Moq1400: Explicitly choose a mocking behavior instead of relying on the default (Loose) behavior
 
-| Item | Value |
-| --- | --- |
-| Enabled | True |
+| Item     | Value   |
+| -------- | ------- |
+| Enabled  | True    |
 | Severity | Warning |
-| CodeFix | False |
+| CodeFix  | False   |
 ---
 
 Mocks use the `MockBehavior.Loose` by default. Some people find this default behavior undesirable, as it can lead to
@@ -46,3 +46,26 @@ var mock = new Mock<ISample>(MockBehavior.Strict); // Or `MockBehavior.Loose`
 var mock2 = new Mock.Of<ISample>(MockBehavior.Strict); // Or `MockBehavior.Loose`
 var repo = new MockRepository(MockBehavior.Strict); // Or `MockBehavior.Loose`
 ```
+
+## Suppress a warning
+
+If you just want to suppress a single violation, add preprocessor directives to
+your source file to disable and then re-enable the rule.
+
+```csharp
+#pragma warning disable Moq1400
+var mock = new Mock<ISample>(); // Moq1400: Moq: Explicitly choose a mock behavior
+#pragma warning restore Moq1400
+```
+
+To disable the rule for a file, folder, or project, set its severity to `none`
+in the
+[configuration file](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/configuration-files).
+
+```ini
+[*.{cs,vb}]
+dotnet_diagnostic.Moq1400.severity = none
+```
+
+For more information, see
+[How to suppress code analysis warnings](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/suppress-warnings).
