Update docs/rules/Moq1410.md to add blank line around table
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/docs/rules/Moq1410.md
+++ b/docs/rules/Moq1410.md
@@ -1,10 +1,13 @@
 # Moq1410: Explicitly set the Strict mocking behavior
 
+# Moq1410: Explicitly set the Strict mocking behavior
+
 | Item     | Value   |
 | -------- | ------- |
 | Enabled  | True    |
 | Severity | Info    |
 | CodeFix  | True    |
+
 ---
 
 Mocks use the `MockBehavior.Loose` by default. Some people find this default behavior undesirable, as it can lead to
