Fix syntax in docs for Mock.Of

--- a/docs/rules/Moq1410.md
+++ b/docs/rules/Moq1410.md
@@ -43,7 +43,7 @@ interface ISample
 }
 
 var mock = new Mock<ISample>(MockBehavior.Strict);
-var mock2 = new Mock.Of<ISample>(MockBehavior.Strict);
+var mock2 = Mock.Of<ISample>(MockBehavior.Strict);
 var repo = new MockRepository(MockBehavior.Strict);
 ```
 
