Enhance Moq1210 documentation to clarify verification limitations for non-overridable members. Added detailed explanations on how Moq proxies work and provided solutions for avoiding runtime errors when using `Verify` on non-virtual members.

--- a/docs/rules/Moq1210.md
+++ b/docs/rules/Moq1210.md
@@ -7,11 +7,19 @@
 | CodeFix  | False |
 ---
 
-Mocking requires generating a subclass of the class to be mocked. Methods not marked `virtual` cannot be overridden, and thus cannot be verified.
-To fix:
+Moq works by creating a dynamic proxy class at runtime. This proxy inherits from the class being mocked and overrides its `virtual` or `abstract` members. This allows Moq to intercept calls and implement mocking behavior, including verification.
 
-- Mock an interface instead of a class
-- Make the method to be verified `virtual`
+Because of this design, Moq can only intercept calls to members that are overridable:
+- Members of an interface (which are implicitly virtual).
+- `virtual` or `abstract` members of a non-sealed class.
+
+Non-virtual members cannot be overridden in a subclass due to how the .NET CLR works. Consequently, Moq's proxy cannot intercept calls to them. Attempting to `Verify` a non-virtual member will result in a `System.NotSupportedException` at runtime, with a message like "Non-overridable members ... may not be used in setup / verification expressions."
+
+This analyzer helps you avoid this runtime error by identifying `Verify` calls on non-overridable members at compile time.
+
+To fix this issue, you must ensure the member you are verifying can be overridden:
+- If mocking a class, mark the member as `virtual`.
+- Prefer mocking an interface instead of a concrete class.
 
 ```csharp
 class SampleClass
