--- a/docs/rules/Moq1210.md
+++ b/docs/rules/Moq1210.md
@@ -1,10 +1,10 @@
-# Moq1210: Verify should be used only for overridable members
-
-| Item     | Value |
-| -------- | ----- |
-| Enabled  | True  |
-| Severity | Error |
-| CodeFix  | False |
+---
+id: Moq1210
+title: Verify should be used only for overridable members
+severity: error
+language: C#
+enabled: true
+codeFix: True
 ---
 
 Moq works by creating a dynamic proxy class at runtime. This proxy inherits from the class being mocked and overrides its `virtual` or `abstract` members. This allows Moq to intercept calls and implement mocking behavior, including verification.
@@ -21,18 +21,41 @@ To fix this issue, you must ensure the member you are verifying can be overridde
 - If mocking a class, mark the member as `virtual`.
 - Prefer mocking an interface instead of a concrete class.
 
+## How to fix
+
+Ensure that `Verify` is used only with virtual, abstract, or interface members.
+
+## Example
+
+The following code would be flagged by this analyzer because `MyMethod` is not
+overridable:
+
 ```csharp
-class SampleClass
+public class MyClass
 {
-    int Property { get; set; }
-    int NonVirtualMethod() => 0;
+    public int MyMethod()
+    {
+        return 1;
+    }
 }
 
-var mock = new Mock<SampleClass>();
-mock.Verify(x => x.Property);         // Moq1210: Verify should be used only for overridable members
-mock.Verify(x => x.NonVirtualMethod()); // Moq1210: Verify should be used only for overridable members
-mock.VerifyGet(x => x.Property);      // Moq1210: Verify should be used only for overridable members
-mock.VerifySet(x => x.Property = 42); // Moq1210: Verify should be used only for overridable members
+var mock = new Mock<MyClass>();
+mock.Verify(x => x.MyMethod());
+```
+
+To fix this, you can make the method `virtual`:
+
+```csharp
+public class MyClass
+{
+    public virtual int MyMethod()
+    {
+        return 1;
+    }
+}
+
+var mock = new Mock<MyClass>();
+mock.Verify(x => x.MyMethod());
 ```
 
 ## Solution
