--- a/docs/rules/Moq1204.md
+++ b/docs/rules/Moq1204.md
@@ -6,7 +6,13 @@ Arguments passed to `Raises()` do not match the event delegate signature.
 
 ## Rule description
 
-When using `Raises()` to trigger events as part of method setup, the arguments provided must match the parameter types expected by the event delegate.
+The `Raises` method allows you to simulate an event being fired when a mocked method is called. For example, you can configure a `Submit()` method to automatically trigger a `Completed` event.
+
+To identify the event, `Raises` takes a lambda expression like `x => x.Completed += null`. The `+= null` part is the standard Moq syntax for targeting an event without actually providing a handler.
+
+This rule ensures that the arguments you provide to `Raises` are compatible with the signature of the event's delegate. For instance, if an event is defined as `event Action<string>`, the `Raises` method must be called with a `string` argument.
+
+**Why this is important:** If the arguments do not match the event's delegate signature, your test code will compile successfully. However, the test will fail at runtime when Moq attempts to invoke the event with mismatched arguments. This analyzer turns a subtle runtime bug into a clear compile-time error, making it easier to write correct tests.
 
 ## How to fix violations
 
