--- a/docs/rules/Moq1302.md
+++ b/docs/rules/Moq1302.md
@@ -9,6 +9,11 @@
 
 LINQ to Mocks (using `Mock.Of<T>()`) allows creating mock objects using lambda expressions that define their behavior. However, these expressions can only reference virtual, abstract, or interface members that can actually be mocked. Attempting to reference non-virtual members will cause runtime issues.
 
+Additional patterns flagged by this analyzer include:
+- Instance and static fields
+- Events
+- Nested or chained member accesses
+
 ## Examples of patterns that are flagged by this analyzer
 
 ```csharp
