fix: correctly update category for Moq1300
- Adds 'Usage' to DiagnosticCategory

- Updates AsShouldBeUsedOnlyForInterfaceAnalyzer to use 'Usage' category

- Updates shipped and unshipped release files

Fixes #648

--- a/docs/rules/Moq1300.md
+++ b/docs/rules/Moq1300.md
@@ -2,9 +2,10 @@
 
 | Item     | Value |
 | -------- | ----- |
+| Category | Usage |
 | Enabled  | True  |
 | Severity | Error |
-| CodeFix  | False |
+| CodeFix  | No    |
 ---
 
 The `.As()` method is used when a mocked object must implement multiple interfaces. It cannot be used with abstract or
