docs: expand Moq1300 documentation with details on generic type parameters and workarounds

--- a/docs/rules/Moq1300.md
+++ b/docs/rules/Moq1300.md
@@ -47,6 +47,63 @@ class SampleClass
 var mock = new Mock<ISampleInterface>();
 ```
 
+### Known Limitation: Generic Type Parameters
+
+> **Note:** This limitation is under investigation ([#756](https://github.com/rjmurillo/moq.analyzers/issues/756)). Future versions may provide better support for generic type parameters.
+
+Moq1300 currently fires for generic type parameters constrained to interfaces:
+
+```csharp
+void SetupMyMock<T>(Mock<IFoo> mock, Action<Mock<T>> setupStuff) 
+    where T : IFoo
+{
+    // Moq1300 fires here, even though T is constrained to IFoo
+    setupStuff(mock.As<T>());
+}
+```
+
+#### Why This Happens
+
+C# generic constraints cannot enforce "interface-only" requirements. While `where T : IFoo` ensures `T` implements the interface, it doesn't prevent `T` from being a class:
+
+```csharp
+class Foo : IFoo { }  // Satisfies the constraint
+
+void Use()
+{
+    var mock = new Mock<Foo>();
+    SetupMyMock(mock, foo => { /* ... */ });  // Compiles, but fails at runtime
+}
+```
+
+Because `Mock.As<T>()` only works with interfaces, the analyzer **errs on the side of safety** and reports this as an error to prevent potential runtime failures.
+
+#### Current Workaround
+
+If you control all call sites and can guarantee `T` will always be an interface type, you may suppress this diagnostic:
+
+```csharp
+void SetupMyMock<T>(Mock<IFoo> mock, Action<Mock<T>> setupStuff) 
+    where T : IFoo
+{
+#pragma warning disable Moq1300
+    setupStuff(mock.As<T>());
+#pragma warning restore Moq1300
+}
+```
+
+**⚠️ Warning:** Only suppress this diagnostic if:
+
+- You control all call sites and verify `T` is always an interface
+- The helper method is internal to your test project with limited, verified usage
+- You have integration tests that validate all generic patterns
+
+**Do not suppress if:**
+
+- The helper is in a public library or shared test infrastructure
+- Call sites are outside your control
+- Runtime failures would be difficult to diagnose or impact many tests
+
 ## Suppress a warning
 
 If you just want to suppress a single violation, add preprocessor directives to
