docs: update Moq1300 documentation to clarify handling of generic type parameters and suppression guidance

--- a/docs/rules/Moq1300.md
+++ b/docs/rules/Moq1300.md
@@ -47,11 +47,11 @@ class SampleClass
 var mock = new Mock<ISampleInterface>();
 ```
 
-### Known Limitation: Generic Type Parameters
+### Advanced Scenarios: Generic Type Parameters
 
-> **Note:** This limitation is under investigation ([#756](https://github.com/rjmurillo/moq.analyzers/issues/756)). Future versions may provide better support for generic type parameters.
+#### When to Suppress This Diagnostic
 
-Moq1300 currently fires for generic type parameters constrained to interfaces:
+Moq1300 fires for generic type parameters constrained to interfaces, even though the constraint ensures interface compatibility at the call site:
 
 ```csharp
 void SetupMyMock<T>(Mock<IFoo> mock, Action<Mock<T>> setupStuff) 
@@ -64,45 +64,41 @@ void SetupMyMock<T>(Mock<IFoo> mock, Action<Mock<T>> setupStuff)
 
 #### Why This Happens
 
-C# generic constraints cannot enforce "interface-only" requirements. While `where T : IFoo` ensures `T` implements the interface, it doesn't prevent `T` from being a class:
-
-```csharp
-class Foo : IFoo { }  // Satisfies the constraint
-
-void Use()
-{
-    var mock = new Mock<Foo>();
-    SetupMyMock(mock, foo => { /* ... */ });  // Compiles, but fails at runtime
-}
-```
+C# generic constraints cannot enforce "interface-only" requirements. While `where T : IFoo` ensures `T` implements the interface `IFoo`, it doesn't prevent `T` from being a class (e.g., `class Foo : IFoo {}`), which would cause `Mock.As<T>()` to fail at runtime.
 
 Because `Mock.As<T>()` only works with interfaces, the analyzer **errs on the side of safety** and reports this as an error to prevent potential runtime failures.
 
-#### Current Workaround
+#### When Suppression is Appropriate
 
-If you control all call sites and can guarantee `T` will always be an interface type, you may suppress this diagnostic:
+- You control all call sites and can verify `T` is always an interface
+- Your helper method is internal to your test project with limited usage
+- You have integration tests validating the generic patterns
+
+#### When to Avoid Suppression
+
+- The helper is in a public library
+- Call sites are outside your control
+- Runtime failures would be difficult to diagnose
+
+##### Suppression Example
 
 ```csharp
 void SetupMyMock<T>(Mock<IFoo> mock, Action<Mock<T>> setupStuff) 
     where T : IFoo
 {
-#pragma warning disable Moq1300
+    #pragma warning disable Moq1300 // Helper method used in test where call sites are under our control
     setupStuff(mock.As<T>());
-#pragma warning restore Moq1300
+    #pragma warning restore Moq1300
 }
 ```
 
-**⚠️ Warning:** Only suppress this diagnostic if:
+> **Note:** Per [issue #756](https://github.com/rjmurillo/moq.analyzers/issues/756), this guidance may be reconsidered if:
 
-- You control all call sites and verify `T` is always an interface
-- The helper method is internal to your test project with limited, verified usage
-- You have integration tests that validate all generic patterns
-
-**Do not suppress if:**
-
-- The helper is in a public library or shared test infrastructure
-- Call sites are outside your control
-- Runtime failures would be difficult to diagnose or impact many tests
+1. multiple independent users report the scenario,
+2. official Moq documentation includes this pattern,
+3. C# adds interface-only constraints,
+4. significant community validation, or
+5. the pattern appears in other major OSS projects
 
 ## Suppress a warning
 
