--- a/docs/rules/Moq1300.md
+++ b/docs/rules/Moq1300.md
@@ -47,9 +47,31 @@ class SampleClass
 var mock = new Mock<ISampleInterface>();
 ```
 
-### Advanced Scenarios: Generic Type Parameters
+## Suppress a warning
 
-#### When to Suppress This Diagnostic
+If you just want to suppress a single violation, add preprocessor directives to
+your source file to disable and then re-enable the rule.
+
+```csharp
+#pragma warning disable Moq1300
+var mock = new Mock<SampleClass>()
+    .As<SampleClass>(); // Moq1300: Mock.As() should take interfaces only
+#pragma warning restore Moq1300
+```
+
+To disable the rule for a file, folder, or project, set its severity to `none`
+in the
+[configuration file](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/configuration-files).
+
+```ini
+[*.{cs,vb}]
+dotnet_diagnostic.Moq1300.severity = none
+```
+
+For more information, see
+[How to suppress code analysis warnings](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/suppress-warnings).
+
+### Advanced Scenarios: Generic Type Parameters
 
 Moq1300 fires for generic type parameters constrained to interfaces, even though the constraint ensures interface compatibility at the call site:
 
@@ -93,33 +115,9 @@ void SetupMyMock<T>(Mock<IFoo> mock, Action<Mock<T>> setupStuff)
 ```
 
 > **Note:** Per [issue #756](https://github.com/rjmurillo/moq.analyzers/issues/756), this guidance may be reconsidered if:
-
-1. multiple independent users report the scenario,
-2. official Moq documentation includes this pattern,
-3. C# adds interface-only constraints,
-4. significant community validation, or
-5. the pattern appears in other major OSS projects
-
-## Suppress a warning
-
-If you just want to suppress a single violation, add preprocessor directives to
-your source file to disable and then re-enable the rule.
-
-```csharp
-#pragma warning disable Moq1300
-var mock = new Mock<SampleClass>()
-    .As<SampleClass>(); // Moq1300: Mock.As() should take interfaces only
-#pragma warning restore Moq1300
-```
-
-To disable the rule for a file, folder, or project, set its severity to `none`
-in the
-[configuration file](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/configuration-files).
-
-```ini
-[*.{cs,vb}]
-dotnet_diagnostic.Moq1300.severity = none
-```
-
-For more information, see
-[How to suppress code analysis warnings](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/suppress-warnings).
+>
+>1. multiple independent users report the scenario,
+>2. official Moq documentation includes this pattern,
+>3. C# adds interface-only constraints,
+>4. significant community validation, or
+>5. the pattern appears in other major OSS projects
