docs(Moq1300): add guidance for generic type parameter scenarios (#762)
## Summary

Enhances the Moq1300 documentation to provide clear guidance for
handling generic type parameters constrained to interfaces, addressing
the scenario reported in #756.

## Changes

### Documentation Updates

- Added new "Advanced Scenarios: Generic Type Parameters" section to
`docs/rules/Moq1300.md`
- Explains why Moq1300 fires for generic type parameters (C# cannot
enforce "interface-only" constraints)
- Provides clear criteria for when suppression is appropriate vs. when
to avoid it
- Includes practical suppression example with inline comments
- Documents the maintainer's reconsideration criteria for potential
future changes

### Key Improvements

1. **Clarified the C# language limitation**: Explains that `where T :
IFoo` allows both interfaces and classes implementing `IFoo`, which
creates the diagnostic scenario
2. **Safety-first approach**: Maintains the analyzer's error severity
while providing guidance for legitimate use cases
3. **Structured guidance**: Clear "When Suppression is Appropriate" and
"When to Avoid Suppression" sections
4. **Transparency**: References issue #756 and documents conditions
under which this guidance may be reconsidered

## Rationale

This documentation-first approach was chosen over implementing a
separate diagnostic due to:

1. **Pattern rarity**: Single reported instance of an admittedly unusual
scenario
2. **Resource allocation**: For a resource-constrained OSS project,
enhanced documentation is more efficient than multi-file analyzer
changes
3. **Language limitation**: C# constraints cannot provide compile-time
safety for "interface-only" regardless of diagnostic severity
4. **Existing precedent**: Similar scenarios are already handled via
documented suppression guidance
5. **Safety trade-off**: Error severity prevents runtime failures while
suppression provides flexibility for controlled scenarios

Closes #756

CC  @andrewimcclement

<!-- This is

--- a/docs/rules/Moq1300.md
+++ b/docs/rules/Moq1300.md
@@ -70,3 +70,54 @@ dotnet_diagnostic.Moq1300.severity = none
 
 For more information, see
 [How to suppress code analysis warnings](https://learn.microsoft.com/en-us/dotnet/fundamentals/code-analysis/suppress-warnings).
+
+### Advanced Scenarios: Generic Type Parameters
+
+Moq1300 fires for generic type parameters constrained to interfaces, even though the constraint ensures interface compatibility at the call site:
+
+```csharp
+void SetupMyMock<T>(Mock<IFoo> mock, Action<Mock<T>> setupStuff) 
+    where T : IFoo
+{
+    // Moq1300 fires here, even though T is constrained to IFoo
+    setupStuff(mock.As<T>());
+}
+```
+
+#### Why This Happens
+
+C# generic constraints cannot enforce "interface-only" requirements. While `where T : IFoo` ensures `T` implements the interface `IFoo`, it doesn't prevent `T` from being a class (e.g., `class Foo : IFoo {}`), which would cause `Mock.As<T>()` to fail at runtime.
+
+Because `Mock.As<T>()` only works with interfaces, the analyzer **errs on the side of safety** and reports this as an error to prevent potential runtime failures.
+
+#### When Suppression is Appropriate
+
+- You control all call sites and can verify `T` is always an interface
+- Your helper method is internal to your test project with limited usage
+- You have integration tests validating the generic patterns
+
+#### When to Avoid Suppression
+
+- The helper is in a public library
+- Call sites are outside your control
+- Runtime failures would be difficult to diagnose
+
+##### Suppression Example
+
+```csharp
+void SetupMyMock<T>(Mock<IFoo> mock, Action<Mock<T>> setupStuff) 
+    where T : IFoo
+{
+    #pragma warning disable Moq1300 // Helper method used in test where call sites are under our control
+    setupStuff(mock.As<T>());
+    #pragma warning restore Moq1300
+}
+```
+
+> **Note:** Per [issue #756](https://github.com/rjmurillo/moq.analyzers/issues/756), this guidance may be reconsidered if:
+>
+>1. multiple independent users report the scenario,
+>2. official Moq documentation includes this pattern,
+>3. C# adds interface-only constraints,
+>4. significant community validation, or
+>5. the pattern appears in other major OSS projects
